--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.smartinhaler"
+  package="com.maclesoft.smartinhaler"
 >
     <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
