--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.26.0",
     "i18next": "^21.6.5",
     "lottie-react-native": "^5.0.1",
     "moment": "^2.29.1",
@@ -27,10 +28,14 @@
     "react-native": "0.66.4",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-flash-message": "^0.2.1",
     "react-native-flipper": "^0.127.0",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.11.2",
+    "react-native-permissions": "^3.3.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
